[gd_scene load_steps=4 format=3 uid="uid://cgvgeuuijy1s7"]

[ext_resource type="Script" path="res://scenes/ui/information_screen/information_screen.gd" id="1_85cmx"]
[ext_resource type="Theme" uid="uid://dgxt0xkl1qxl5" path="res://scenes/ui/UI.theme" id="1_fdk7t"]
[ext_resource type="Script" path="res://addons/OBSControlLibrary/SlideoutContainer/slide_out_container.gd" id="1_kdrxp"]

[node name="InformationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fdk7t")
script = ExtResource("1_85cmx")

[node name="SlideoutInfo" type="Container" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_kdrxp")
slide_edge = 1
slide_duration = 0.5
transition_type = 4
ease_type = 2

[node name="MC" type="MarginContainer" parent="SlideoutInfo"]
layout_mode = 2
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="SlideoutInfo/MC"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="SlideoutInfo/MC/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
theme_type_variation = &"NotePanelContainer"

[node name="ScrollContainer" type="ScrollContainer" parent="SlideoutInfo/MC/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="SlideoutInfo/MC/VBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true

[node name="BTN_Exit" type="Button" parent="SlideoutInfo/MC/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Exit"

[connection signal="pressed" from="SlideoutInfo/MC/VBoxContainer/BTN_Exit" to="." method="_on_btn_exit_pressed"]
